--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -10,7 +10,6 @@
 .auth_lt {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
   padding: 6rem;
   min-height: 95vh;
@@ -126,6 +125,10 @@
   position: relative;
   padding: 4rem 0;
   max-width: 100%;
+}
+
+.authx {
+  margin-top: 5rem;
 }
 
 .center::before {
